--- a/design-system/src/components/Coupon/Coupon.module.css
+++ b/design-system/src/components/Coupon/Coupon.module.css
@@ -44,6 +44,7 @@
 .cardText {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 2px;
   flex-shrink: 0;
 }
